syntax="proto3";

package testdata;

option go_package ="github.com/fdymylja/tmos/testdata/testpb";

message SimpleMessage {
  string a = 1;
  int64  b = 2;
  repeated bytes c = 3;
}

message SimpleMessageList {
  repeated SimpleMessage list = 1;
}